# tcr-gilded-rose

./: README.md  gilded_rose.py  test_backstage.py  test_cheese.py  test_conjured.py  test_default.py  test_gilded_rose.py  test_increasing.py
python/: gilded_rose.py  pyproject.toml  test_backstage.py  test_default.py  test_gilded_rose.py  test_increasing.py  test_legendary.py  test_quality_tracker.py
